...
  "azanVoice": "Azan Voice",
  "enableAzan": "Enable Azan",
  "enableReminder": "Enable Reminder",
  "qibla": "Qibla",
  "afterSalahAzkar": "After Salah Azkar",
  "afterSalahAzkarDesc": "Get notified to read Azkar after the prayer time",
  "quran": "Quran",
  "loadingQuran": "Loading Quran...",
  "errorLoadingQuran": "Error Loading Quran",
  "searchSurah": "Search for a Surah...",
  "ayah": "Ayah",
  "surah": "Surah",
  "quranTab": "Quran",
...
  "fontFamily": "Font Family",
  "removeFromBookmarks": "Remove from Bookmarks",
  "addToBookmarks": "Add to Bookmarks",
  "removedFromBookmarks": "Removed from Bookmarks",
  "addedToBookmarks": "Added to Bookmarks",
  "markAsLastRead": "Mark as Last Read",
  "tafsir": "Tafsir",
  "audio": "Audio",
  "selectTafsir": "Select Tafsir",
  "tafsirWithVal": "Tafsir: {name}",
  "errorLoadingTafsir": "Error loading Tafsir: {error}",
  "noTafsirAvailable": "No tafsir available",
  "errorPlayingAudio": "Error playing audio: {error}",
  "quranRecitation": "Quran Recitation",
...
