...
                            // Surah Tab
                            filteredSurahs.isEmpty && !state.isLoading
                                ? Center(child: Text(l10n.noSearchResults))
                                : Stack(
                                    children: [
                                      ListView.separated(
                                        key: const Key('surah_list_view'),
                                        padding: const EdgeInsets.all(16),
                                        controller: _surahScrollController,
                                        physics: const ScrollPhysics(),
                                        itemCount:
                                            filteredSurahs.length +
                                            (hasLastRead && _searchQuery.isEmpty
...
